# neo-bar

./: Cargo.toml  README.md
examples/: test_bar.rs
src/: bar.rs  config.rs  error.rs  event.rs  lib.rs  main.rs
src/x11/: error.rs  mod.rs  wm.rs
src/xcb/: error.rs  mod.rs
