[package]
name = "neo-bar"
version = "0.0.1"
authors = ["natrixaeria <upezu@student.kit.edu>"]
edition = "2018"
description = "A modular task-bar written in rust"

[features]
default = ["wm-xcb"]
wm-xcb = []

[profile.dev]
opt-level = 1
debug = 2
debug-assertions = true
overflow-checks = true
lto = "off"
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = 0
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[dependencies]
xcb = "0.9"
async-trait = "0.1"
