[package]
name = "neo-bar"
version = "0.0.1"
authors = ["natrixaeria <upezu@student.kit.edu>"]
edition = "2018"
description = "A modular task-bar written in rust"

[features]
default = ["wm-x11-rust"]
wm-x11-rust = ["x11rb"]
wm-x11-xcb = ["x11rb/dl-libxcb"]

[profile.dev]
opt-level = 1
debug = 2
debug-assertions = true
overflow-checks = true
lto = "off"
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = 0
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[dependencies.x11rb]
version = "0.7"
optional = true
default-features = false
features = []
